examples/test/testpolicy11141.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy11141
  namespace: namespace137
spec:
  podSelector:
    matchLabels:
      key34: value39
      key45: value15
      key11: value12
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key15: value41
          key40: value42
          key21: value3
      podSelector:
        matchLabels:
          key19: value1
